Update tomcat, Better Messaging when running root.